# Civilization-VII-Drafter

./: README.md  package-lock.json  package.json  tsconfig.json
.storybook/: main.ts  preview.ts
scripts/python/: README.md  pyproject.toml  scrape_civ7_leaders.py
scripts/python/civ7_leaders_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/python/scraped_data/: leaders.civ7.json
src/app/: globals.scss  layout.tsx  page.module.scss  page.tsx
src/app/card1/: page.tsx
src/app/card2/: page.tsx
src/app/card3/: page.tsx
src/app/draft/: page.module.scss  page.tsx
src/components/Card/: Card.module.scss  Card.tsx
src/components/draft/: DraftView.module.scss  IconButton.tsx  TagInput.tsx  ToggleInfoButton.tsx
src/features/draft/adapters/: createDraftSummaries.ts
src/features/draft/containers/: DraftContainer.tsx
src/features/draft/domain/: data.ts  engine.ts  rng.ts  rules.ts  selectors.ts  types.ts
src/features/draft/hooks/: useDraftController.ts
src/features/draft/selectors/: listUniqueByName.ts
src/features/draft/state/: initialState.ts  reducer.ts
src/features/draft/ui/: DraftView.tsx  IconButton.tsx  PlayerCard.stories.tsx  PlayerCard.tsx  PlayersPanel.tsx  StepPanel.tsx  StyleSummary.tsx  TagInput.stories.tsx  TagInput.tsx  ToggleInfoButton.stories.tsx  ToggleInfoButton.tsx
src/frontend/pages/draft/: DraftPage.tsx
